--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "dependencies": {
     "path": "^0.12.7",
+    "rc-progress": "^2.2.5",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
-    "react-progressbar.js": "^0.2.0",
     "react-scripts": "1.1.4"
   },
   "homepage": "./",
