--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "path": "^0.12.7",
     "rc-progress": "^2.2.5",
     "react": "^16.4.0",
+    "react-circular-progressbar": "^0.8.0",
     "react-dom": "^16.4.0",
     "react-scripts": "1.1.4"
   },
